--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,25 @@ import globals from "globals";
 import pluginJs from "@eslint/js";
 import pluginReact from "eslint-plugin-react";
 
-
 /** @type {import('eslint').Linter.Config[]} */
 export default [
-  {files: ["**/*.{js,mjs,cjs,jsx}"]},
-  {languageOptions: { globals: globals.browser }},
-  pluginJs.configs.recommended,
-  pluginReact.configs.flat.recommended,
+  {
+    files: ["**/*.{js,mjs,cjs,jsx}"],
+    languageOptions: {
+      globals: globals.browser,
+      parserOptions: {
+        ecmaVersion: 2021, // Set ECMAScript version
+        sourceType: "module", // Set the module type
+      },
+    },
+  },
+  pluginJs.configs.recommended, // JS plugin configuration
+  pluginReact.configs.flat.recommended, // React plugin configuration
+  {
+    // Custom rules can be added here
+    rules: {
+      "react/jsx-uses-react": "off", // Example: Disable react/jsx-uses-react rule if needed
+      "react/react-in-jsx-scope": "off", // Disable the rule that requires React to be in scope
+    },
+  },
 ];
