--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "jest": "^29.0.0",
     "nodemon": "^3.1.9"
   }
